user basic CRUD, pending test cases for index
